compiler working standalone now, tied into jruby -C
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2398 961051c9-f516-0410-bf72-c9f7e237a7b7